Possible compatibility problems with earlier versions marked with '*'.

ZOOM_record_get returns ISO2709 buffer when "raw" is given.

--- 1.8.4 2002/01/04

Scan for ZOOM API. New object ZOOM_scanset. New functions
ZOOM_connection_scan, ZOOM_scanset_size, ZOOM_scanset_term and
ZOOM_scanset_destroy.

New ZOOM function, ZOOM_connection_last_event, that returns type
of last event (such as "receive data", "send data", "apdu received",
etc.

New ZOOM option, schema, that specifies shema OID for retrieval.

New CCL feature. Qualifiers can be aliases for one or more
other qualifiers (if more than one is given, OR is used).

ZOOM uses named result sets if target supports it.

Two new YAZ client commands: .  (dot, which sources a script of YAZ
client commands), and ! (to execute shell command.). Implemented
by Jacob Poulsen.

Working on Debian packages.

--- 1.8.3 2001/11/19

YAZ client enables named result sets only if target supports it.

*** ZOOM. Prefix for ZOOM definitions changed from Z3950_ to ZOOM_.

* ZOOM. Removed Z3950_connection_host. Use Z3950_connection_option_get
with key="host" to get same result.

* ZOOM. Added Z3950_record_clone and removed Z3950_resultset_get.
Function Z3950_resultset_record(s) returns references to records
"owned" by resultset. To become owner use Z3950_record_clone.

Function z_ext_record handles Extended Services. Thanks to
Irina Dijour.

--- 1.8.2 2001/11/12

CCL Parser fix: ignore token comma when dealing with and-lists.

Documentation updates for COMSTACK.

* ZOOM changes. Query object renamed from Z3950_search to Z3950_query.
Changed prototype Z3950_records. For some functions, int parameters
were changed to size_t.

TCP/IP COMSTACK no longer uses getprotobyname to avoid memory leak
on some Unices.

New MARC decode/display function, marc_display_exl, which properly rejects
non-ISO2709 records. YAZ client uses it.

--- 1.8.1 2001/10/29

Fix bug: local attribute set wasn't set correctly in PQF strings.

--- 1.8 2001/10/25
